[package]
name = "glacier"
version = "0.1.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alphanumeric-sort = "1.4.0"
anyhow = { workspace = true }
rayon = "1.5.0"
tempfile = "3.1.0"

[workspace]
members = [
    "autofix",
    "labeler"
]

[workspace.dependencies]
anyhow = "1.0.37"
once_cell = "1.2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.101", features = ["derive"] }

[patch.crates-io]
glacier = { path = "." }
