[package]
name = "autofix"
version = "0.1.0"
authors = ["Alex Macleod <alex@macleod.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
glacier = "0.1.0"
once_cell = "1.2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.101", features = ["derive"] }

[dependencies.git2]
version = "0.14"
default-features = false
features = ["https"]
