[package]
name = "autofix"
version = "0.1.0"
authors = ["Alex Macleod <alex@macleod.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
git2 = { version = "0.16", default-features = false, features = ["https"] }
glacier = "0.1.0"
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
