[package]
name = "glacier-grabber"
version = "0.1.0"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glacier = "0.1.0"
once_cell = { workspace = true }
regex = "1"
reqwest = { workspace = true }
serde = { workspace = true }
