[package]
name = "labeler"
version = "0.1.0"
authors = ["Yuki Okushi <huyuumi.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
glacier = "0.1.0"
once_cell = { workspace = true }
regex = "1"
reqwest = { workspace = true }
serde = { workspace = true }
